Update to Tycho 1.0.0 and Eclipse Neon.

--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,17 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<tycho.version>0.24.0</tycho.version>
-		<tycho.extras.version>0.24.0</tycho.extras.version>
-		<tycho.test.platformArgs/>
+		<tycho.version>1.0.0</tycho.version>
+		<tycho.extras.version>1.0.0</tycho.extras.version>
+		<tycho.test.platformArgs />
 		<tycho.test.jvmArgs>-Xmx512m</tycho.test.jvmArgs>
 	</properties>
 
 	<repositories>
 		<repository>
-			<id>mars</id>
+			<id>neon</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/mars</url>
+			<url>http://download.eclipse.org/releases/neon</url>
 		</repository>
 	</repositories>
 
